namespace ApplicationCore.Domain.Enums;

public enum EstadoReporte
{
    SinSolucionar = 1,
    Solucionado = 2
}
