namespace ApplicationCore.Domain.Enums;

public enum EstadoSoporte
{
    SinSolucionar = 1,
    Solucionado = 2
}
