namespace ApplicationCore.Domain.Enums;

public enum TipoInsignia
{
    Perfil = 1,
    Marco = 2,
    Fondo = 3,
    Icono = 4
}
