namespace ApplicationCore.Domain.Enums;

public enum TipoOperacion
{
    Cobro = 1,
    Pago = 2
}
